# onit

./: Dockerfile  MANIFEST.in  README.md  RELEASE.md  dashboard.html  docker-compose.yml  pyproject.toml  requirements.txt  summary.md
.github/workflows/: ci.yml
configs/: default.yaml  turtlebot.yaml
docs/: DEPLOYMENT_WEB.md  DOCKER.md  GATEWAY_QUICK_START.md  GOOGLE_WORKSPACE_AND_OAUTH.md  TESTING.md  TURTLEBOT_V3_OBSTACLE_BYPASS_PLAN.md
motion_server/: motion_server.py  motion_server_tbot.py
src/: __init__.py  cli.py  onit.py
src/configs/: default.yaml  turtlebot.yaml
src/lib/: tools.py
src/mcp/prompts/: prompts.py
src/mcp/servers/: run.py
src/mcp/turtlebot/: camera_mcp_server.py  motion_mcp_server.py
src/mcp/turtlebot_v2/: __init__.py  camera_mcp_server.py  lidar_mcp_server.py  motion_mcp_server.py  search_mcp_server.py  vision_mcp_server.py
src/mcp/turtlebot_v3/: __init__.py  lidar_mcp_server.py  motion_mcp_server.py  nav_mcp_server.py  (+2 more)
src/test/: conftest.py  test_chat.py  test_cli.py  test_mcp_prompts.py  test_mcp_server_runner.py  test_mcp_tools_security.py  test_onit.py  test_tool_discovery.py  test_turtlebot_camera_mcp_v2.py  test_turtlebot_lidar_angle_v3.py  test_turtlebot_lidar_free_space_map_v3.py  test_turtlebot_lidar_mcp_v2.py  test_turtlebot_lidar_mcp_v3.py  test_turtlebot_motion_approach_delta_v3.py  test_turtlebot_motion_bypass_v3.py  test_turtlebot_motion_mcp_v2.py  test_turtlebot_motion_mcp_v3.py  test_turtlebot_nav_mcp_v3.py  test_turtlebot_prompt_template.py  test_turtlebot_search_mcp_v2.py  test_turtlebot_session_map_visualizer.py  test_turtlebot_vision_mcp_v2.py  test_turtlebot_vision_mcp_v3.py  test_turtlebot_vision_scan_for_object_v3.py  test_turtlebot_vision_scan_step_v3.py  test_viber.py  test_web_ui.py
src/ui/: __init__.py  telegram.py  viber.py  web.py
video_server/: video_server.py  video_viewer.py
(+10 files in other folders)
